--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Sign in with Google"
+                android:text="Đăng nhập Google"
                 android:textColor="#000000"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -130,7 +130,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don’t have account? "
+                android:text="Bạn chưa có tài khoản? "
                 android:textColor="#A8A8A8"
                 android:textSize="14sp" />
 
@@ -138,7 +138,7 @@
                 android:id="@+id/tvRegisterDangNhap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register"
+                android:text="Đăng ký"
                 android:textColor="#E48F45"
                 android:textStyle="bold"
                 android:textSize="14sp"
@@ -157,7 +157,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Forget Password? "
+                android:text="Quên mật khẩu? "
                 android:textColor="#A8A8A8"
                 android:textSize="14sp" />
 
@@ -165,7 +165,7 @@
                 android:id="@+id/tvResetDangNhap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reset"
+                android:text="Cài lại"
                 android:textColor="#E48F45"
                 android:textStyle="bold"
                 android:textSize="14sp"
