--- a/app/src/main/res/layout/activity_man_dang_ky.xml
+++ b/app/src/main/res/layout/activity_man_dang_ky.xml
@@ -125,7 +125,7 @@
         android:id="@+id/banDaCoTaiKhoanTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bạn đã có tài khoản rồi?"
+        android:text="Bạn đã có tài khoản? "
         android:fontFamily="@font/poppins_semibold"
         android:textSize="12sp"
         android:textColor="@color/XamNhat"
