--- a/app/src/main/res/layout/activity_mat_khau_moi.xml
+++ b/app/src/main/res/layout/activity_mat_khau_moi.xml
@@ -63,7 +63,7 @@
         android:id="@+id/nutXacNhanMatKhauMoiTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Đăng ký"
+        android:text="Xác nhận"
         android:textColor="@color/white"
         android:background="@drawable/nen_nut"
         android:padding="20dp"
