--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -3,9 +3,11 @@
     android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#11151C"
+    >
 
     <LinearLayout
+
         android:id="@+id/toolbarLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -28,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nhập mã OTP"
+        android:textColor="@android:color/white"
         android:inputType="number"
         android:padding="15dp" />
 
