--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -14,6 +14,8 @@
         android:id="@+id/timKiemEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:clickable="true"
+        android:focusable="false"
         android:hint="Tìm quần áo của bạn..."
         android:padding="16dp"
         android:layout_margin="16dp"
