--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -77,7 +77,7 @@
             android:id="@+id/btnAdd"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/heart_empty"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Thêm vào giỏ hàng"/>
     </LinearLayout>
