--- a/app/src/main/res/layout/activity_man_dat_hang.xml
+++ b/app/src/main/res/layout/activity_man_dat_hang.xml
@@ -17,12 +17,12 @@
         <!-- Back Button -->
         <ImageButton
             android:id="@+id/quayLaiBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="start|top"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@android:drawable/ic_menu_revert"
-            android:tint="@color/white"
-            android:contentDescription="Quay lại" />
+            android:src="@drawable/back_icon"
+            android:contentDescription="Quay lại"  />
 
         <!-- Shipping Info Section -->
         <LinearLayout
