--- a/app/src/main/res/drawable/heart_empty.xml
+++ b/app/src/main/res/drawable/heart_empty.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="24">
 
     <path
-        android:fillColor="#FFA500"
+        android:fillColor="#FFFF"
         android:pathData="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2
             8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5
             2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22
