--- a/app/src/main/res/layout/activity_gui_ma_xac_nhan.xml
+++ b/app/src/main/res/layout/activity_gui_ma_xac_nhan.xml
@@ -24,12 +24,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nhập mã xác thực"
+        android:text="Hãy nhập Email của bạn !"
         android:textColor="#FFFFFF"
         android:layout_marginHorizontal="24dp"
-
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="20dp"
         android:layout_marginBottom="16dp" />
 
     <!-- Input Email -->
@@ -39,9 +38,8 @@
         android:text="Email"
         android:textColor="#FFFFFF"
         android:layout_marginHorizontal="24dp"
-
         android:textStyle="bold"
-        android:textSize="14sp"
+        android:textSize="15sp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp" />
 
