--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -43,9 +43,9 @@
         android:id="@+id/edtOtp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFF"
         android:hint="Nhập mã OTP"
         android:inputType="number"
+        android:background="@drawable/bg_color_selected"
         android:padding="19dp"
         android:textColor="@android:color/background_dark"
         android:textSize="19sp" />
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/btn_send_otp"
+        android:background="@drawable/btn_rounded_red"
         android:fontFamily="@font/poppins_semibold"
         android:padding="15dp"
         android:text="Gửi lại mã"
