--- a/app/src/main/res/layout/activity_gui_ma_xac_nhan.xml
+++ b/app/src/main/res/layout/activity_gui_ma_xac_nhan.xml
@@ -35,7 +35,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="Email:"
         android:textColor="#FFFFFF"
         android:layout_marginHorizontal="24dp"
         android:textStyle="bold"
