--- a/app/src/main/res/layout/activity_lien_he.xml
+++ b/app/src/main/res/layout/activity_lien_he.xml
@@ -52,18 +52,19 @@
                     android:textStyle="bold"/>
             </LinearLayout>
 
-            <!-- Form inputs (viền cam, nền trắng, bo góc) -->
             <EditText
                 android:id="@+id/edtHoTen"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/bg_input_contact"
-                android:hint="SDT"
+                android:hint="Họ và tên"
                 android:paddingHorizontal="14dp"
                 android:textColor="#1A1A1A"
                 android:textColorHint="#8E96A3"
-                android:inputType="phone"/>
+                android:inputType="textPersonName"
+                android:singleLine="true"/>
+
 
             <EditText
                 android:id="@+id/edtSDT"
@@ -95,7 +96,7 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/bg_input_contact"
-                android:hint="Địa chỉ"
+                android:hint="Địa Chỉ"
                 android:paddingHorizontal="14dp"
                 android:textColor="#1A1A1A"
                 android:textColorHint="#8E96A3"
