--- a/app/src/main/res/layout/activity_mat_khau_moi.xml
+++ b/app/src/main/res/layout/activity_mat_khau_moi.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#0F0E0E"
     android:padding="24dp"
