--- a/app/src/main/res/layout/activity_mat_khau_sai.xml
+++ b/app/src/main/res/layout/activity_mat_khau_sai.xml
@@ -1,11 +1,10 @@
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#0F0E0E"
-    android:id="@+id/main"
+    android:background="#000000"
     tools:context=".MatKhauSai">
 
     <LinearLayout
@@ -13,68 +12,75 @@
         android:gravity="center"
         android:padding="24dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-
+        <!-- Nút quay lại -->
+        <ImageButton
+            android:id="@+id/BtnQuayLaiSMK"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/back"
+            android:background="@android:color/transparent"
+            android:layout_gravity="start"
+            android:contentDescription="Quay lại" />
 
         <!-- Logo -->
         <ImageView
             android:id="@+id/imgLogo"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:src="@drawable/logo"
             android:layout_marginBottom="24dp" />
 
-        <!-- Title -->
+        <!-- Tiêu đề -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chào mừng đến với PROSOTE"
+            android:text="Chào mừng đến với FiveStore !"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginBottom="4dp" />
+            android:textSize="20sp"
+            android:layout_marginBottom="6dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Đăng nhập để tiếp tục !"
-            android:textColor="#A8A8A8"
+            android:text="Vui lòng đăng nhập để tiếp tục"
+            android:textColor="#BBBBBB"
             android:textSize="14sp"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="20dp" />
 
         <!-- Email -->
         <EditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="Email Address"
+            android:hint="Địa chỉ Email"
             android:inputType="textEmailAddress"
             android:padding="12dp"
             android:textColor="#FFFFFF"
             android:textColorHint="#999999"
             android:textSize="15sp"
             android:background="@drawable/bg_login"
-            android:layout_marginBottom="12dp" />
+            android:layout_marginBottom="14dp" />
 
-        <!-- Password -->
+        <!-- Mật khẩu -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/bg_login"
-            android:layout_marginBottom="12dp">
+            android:layout_marginBottom="14dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/matKhauDangNhapSaiMKTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="12dp"
-                android:hint="PassWord"
-                android:textColor="#FFFFFF"
+                android:hint="Mật khẩu"
                 android:textColorHint="#999999"
-                android:textSize="15sp"
                 android:inputType="textPassword"
-                android:background="@drawable/bg_login"/>
+                android:paddingStart="12dp"
+                android:textColor="#FFFFFF"
+                android:background="@android:color/transparent"/>
 
             <ImageView
                 android:id="@+id/imgShowHidePassword"
@@ -84,45 +90,31 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="12dp"
                 android:src="@drawable/mat"
-                android:contentDescription="Show/Hide Password" />
+                android:contentDescription="Hiện/Ẩn mật khẩu" />
         </RelativeLayout>
 
-
-        <!-- Nút Sign In -->
-        <!--        <Button-->
-        <!--            android:id="@+id/btnSignIn"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="55dp"-->
-        <!--            android:text="Sign In"-->
-        <!--            android:textColor="#FFFFFF"-->
-        <!--            android:textSize="16sp"-->
-        <!--            android:background="@drawable/button_otp_bg"-->
-        <!--            android:layout_marginBottom="12dp" />-->
-
+        <!-- Nút đăng nhập -->
         <TextView
             android:id="@+id/nutDangNhapSaiMKTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In"
+            android:text="Đăng nhập"
             android:textColor="@color/white"
             android:background="@drawable/nen_nut"
-            android:padding="20dp"
+            android:padding="16dp"
             android:textAlignment="center"
             android:fontFamily="@font/poppins_semibold"
-            android:textSize="14dp"
-            android:layout_marginTop="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/nhapLaiMatKhauTextInputLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            android:textSize="16sp"
+            android:layout_marginTop="20dp" />
 
-        <!-- Nút Sign in with Google -->
+        <!-- Nút đăng nhập bằng Google -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@drawable/bg_google"
             android:gravity="center"
             android:orientation="horizontal"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp">
 
             <ImageView
@@ -130,18 +122,14 @@
                 android:layout_height="24dp"
                 android:src="@drawable/google" />
 
-
             <TextView
-                android:layout_width="150dp"
-                android:layout_marginRight="20dp"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Sign in with Google"
+                android:text="Đăng nhập với Google"
                 android:textColor="#000000"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-
-
         </LinearLayout>
 
         <!-- Dòng đăng ký -->
@@ -155,7 +143,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don’t have account? "
+                android:text="Chưa có tài khoản? "
                 android:textColor="#A8A8A8"
                 android:textSize="14sp" />
 
@@ -163,7 +151,7 @@
                 android:id="@+id/tvRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register"
+                android:text="Đăng ký"
                 android:textColor="#E48F45"
                 android:textStyle="bold"
                 android:textSize="14sp"
@@ -182,7 +170,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Forget Password? "
+                android:text="Quên mật khẩu? "
                 android:textColor="#A8A8A8"
                 android:textSize="14sp" />
 
@@ -190,7 +178,7 @@
                 android:id="@+id/tvReset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reset"
+                android:text="Khôi phục"
                 android:textColor="#E48F45"
                 android:textStyle="bold"
                 android:textSize="14sp"
@@ -198,7 +186,5 @@
                 android:focusable="true" />
         </LinearLayout>
 
-
     </LinearLayout>
-
 </ScrollView>
