--- a/app/src/main/res/layout/activity_man_dat_hang.xml
+++ b/app/src/main/res/layout/activity_man_dat_hang.xml
@@ -126,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="Thanh toán trước"
+                    android:text="Thanh toán trước (VNPay)"
                     android:textColor="@color/white" />
             </RadioGroup>
         </LinearLayout>
