--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="XamNhat">#BDBDBD</color>
     <color name="MauHint">#52555A</color>
     <color name="maunen">#1E1E1E</color>
+    <color name="orange_color">#FFA500</color>
     <color name="favorite_color">#D17842</color>
 
 </resources>
