--- a/app/src/main/res/drawable/bg_button_outline.xml
+++ b/app/src/main/res/drawable/bg_button_outline.xml
@@ -1,6 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@android:color/transparent" />
-    <stroke android:width="1dp" android:color="#BBBBBB" />
+    <stroke
+        android:width="1dp"
+        android:color="#FF9800" /> <!-- Viền cam -->
     <corners android:radius="20dp" />
 </shape>
