--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -9,6 +9,12 @@
     android:padding="4dp">
 
     <!-- Ảnh vuông -->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="item_notification.xml" />
+
     <ImageView
         android:id="@+id/imgProduct"
         android:layout_width="0dp"
