--- a/app/src/main/res/layout/activity_man_don_hang.xml
+++ b/app/src/main/res/layout/activity_man_don_hang.xml
@@ -22,8 +22,8 @@
 
         <ImageButton
             android:id="@+id/quayLaiBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_vertical"
             android:background="@android:color/transparent"
             android:src="@drawable/quay_lai_img" />
