--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:padding="0dp">
 
     <!-- Thanh tiêu đề -->
     <LinearLayout
@@ -12,12 +13,13 @@
         android:layout_height="56dp"
         android:background="#1976D2"
         android:gravity="center_vertical"
-        android:paddingHorizontal="16dp">
+        android:paddingHorizontal="16dp"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Thanh toán VNPay"
+            android:text="."
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold" />
