--- a/app/src/main/res/layout/activity_tim_kiem.xml
+++ b/app/src/main/res/layout/activity_tim_kiem.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:orientation="vertical">
 
         <!-- Nút back + thanh tìm kiếm -->
@@ -21,8 +22,8 @@
 
             <ImageButton
                 android:id="@+id/btnBackSearch"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/bg_back_button"
                 android:padding="8dp"
                 android:src="@drawable/back_icon"
@@ -43,8 +44,8 @@
 
             <ImageButton
                 android:id="@+id/btnSearchAction"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/bg_back_button"
                 android:src="@drawable/ic_search"
@@ -71,6 +72,7 @@
             android:layout_marginTop="12dp"
             android:columnCount="4"
             android:alignmentMode="alignMargins"
+
             android:useDefaultMargins="true">
 
 
