--- a/app/src/main/res/layout/fragment_trang_ca_nhan.xml
+++ b/app/src/main/res/layout/fragment_trang_ca_nhan.xml
@@ -73,7 +73,7 @@
 
         <!-- Thông tin cá nhân -->
         <LinearLayout
-            android:id="@+id/btnThongTinCaNhan"
+            android:id="@+id/btnXacNhanDoiMatKhau"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
