--- a/app/src/main/res/layout/activity_man_danh_gia_san_pham.xml
+++ b/app/src/main/res/layout/activity_man_danh_gia_san_pham.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mauNen"
+    android:padding="20dp"
     tools:context=".ManDanhGiaSanPham">
 
     <androidx.constraintlayout.widget.ConstraintLayout
