--- a/app/src/main/res/layout/activity_thong_tin_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_thong_tin_ca_nhan.xml
@@ -94,6 +94,6 @@
         android:textStyle="bold"
         android:textColor="#FFFFFF"
         app:cornerRadius="28dp"
-        app:backgroundTint="#FFA500"/>
+        app:backgroundTint="#C75A01"/>
 
 </LinearLayout>
