--- a/app/src/main/res/layout/activity_mat_khau_sai.xml
+++ b/app/src/main/res/layout/activity_mat_khau_sai.xml
@@ -178,7 +178,7 @@
                 android:id="@+id/tvReset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Khôi phục"
+                android:text="Lấy lại"
                 android:textColor="#E48F45"
                 android:textStyle="bold"
                 android:textSize="14sp"
